@@ -1,3 +1,8 @@
 # Algoritmos_y_Programacion_3_Tercera_Entrega -Windows-Java
 
-En este trabajo no se agregaron funcionalidades dado a que se objetivo fue el aplicar la forma de Modelo, Vista y controlador (MVC) en donde se intrdujeron las interfaces graficas traynedo con sigo conceptos de UI y UX,  y la programacion orientada a eventos (POE) sinedo esta una extension de la POO. Para realizar el uso de interfaces graficas, se utilizo la libreria grafica de Java FX.
+En este trabajo no se agregaron funcionalidades dado a que se objetivo fue el aplicar la forma de Modelo, Vista y controlador (MVC) en donde se introdujeron las interfaces graficas trayendo con sigo conceptos de UI y UX,  y la programación orientada a eventos (POE) siendo esta una extensión de la POO. Para realizar el uso de interfaces gráficas, se utilizó la librería grafica de Java FX.
+
+Para correr el juego abrir una consola en la carpeta \Programacion3-TP y ejecutar el comando:
+
+java -jar --enable-preview out\artifacts\TpJava_jar\TpJava.jar
+
